[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Add this:
[patch.crates-io]
mpl-bubblegum = { git = "https://github.com/metaplex-foundation/mpl-bubblegum", tag = "v1.2.0" }
