[package]
name = "solana_cnft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_cnft"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["token", "associated_token"] }
mpl-bubblegum = "1.4.0"
spl-account-compression = { version = "0.3.0", features = [
    "cpi",
    "no-entrypoint",
] }
solana-program = "1.16"
